# drf-api-checker

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGES  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: api.rst  conf.py  globals.txt  howto.rst  index.rst  install.rst  overview.rst  overview.txt  pytest.rst  pytest_recipes.rst  recipes.rst  unittest.rst  unittest_recipes.rst
docs/_ext/: djangodocs.py  version.py
src/drf_api_checker/: __init__.py  apps.py  collector.py  exceptions.py  fs.py  pytest.py  recorder.py  unittest.py  utils.py
src/requirements/: docs.pip  install.pip  testing.pip
tests/: .coveragerc  conftest.py  test_api.py  test_collector.py  test_demo.py  test_pytest.py  test_recorder.py  test_utils.py
tests/_api_checker/conftest/: frozen_detail.fixture.json
tests/_api_checker/test_api/Test1DemoApi/: fixtures.json  master_detail_1.response.json  master_list.response.json
tests/_api_checker/test_api/TestUrls/: fixtures.json  master_detail_101.response.json  master_list.response.json
tests/_api_checker_1.10/test_pytest/: frozen_detail.fixture.json
tests/_api_checker_1.11/test_pytest/: frozen_detail.fixture.json
tests/_api_checker_2.0/test_pytest/: frozen_detail.fixture.json
tests/_api_checker_2.1/test_pytest/: frozen_detail.fixture.json
tests/_api_checker_2.2/test_pytest/: frozen_detail.fixture.json
tests/demoapp/demo/: admin.py  api.py  factories.py  models.py  serializers.py  settings.py  urls.py
(+117 files in other folders)
